--- a/AirlineCompany3/AirlineCompany3/appsettings.json
+++ b/AirlineCompany3/AirlineCompany3/appsettings.json
@@ -10,5 +10,11 @@
     "DatabaseConnection": "Server=MVN-LAPTOP;Database=AirlineCompany3;Trusted_Connection=True;TrustServerCertificate=true;"
   },
   "Host": "localhost",
-  "Port": "8083"
+  "Port": "8083",
+  "Smtp": {
+    "Host": "smtp.gmail.com",
+    "Port": "587",
+    "Username": "psw2023grupa2@gmail.com",
+    "Password": "iqjm gqhi dgvs nyjc"
+  }
 }
