feat: Changed DB Server name.

--- a/AirlineCompany3/AirlineCompany3/appsettings.json
+++ b/AirlineCompany3/AirlineCompany3/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DatabaseConnection": "Server=MVN-LAPTOP;Database=AirlineCompany3;Trusted_Connection=True;TrustServerCertificate=true;"
+    "DatabaseConnection": "Server=MVN;Database=AirlineCompany3;Trusted_Connection=True;TrustServerCertificate=true;"
   },
   "Host": "localhost",
   "Port": "8083",
